up makefile syn lib

--- a/eda_script/Makefile
+++ b/eda_script/Makefile
@@ -1,3 +1,8 @@
+# SYN_LIB = -y ${SYN_HOME}/dw/simver/
+# SYN_HDR = +incdir+${SYN_HOME}/dw/simver/
+# SYN_VCS_LIB = ${SYN_LIB} ${SYN_HDR}
+# INC_EXT = +libext+.v+.sv+.vh+.vsh+.h
+
 #-------------------------------------------------------------------------------------------------------
 comp  : clean vcs
 #-------------------------------------------------------------------------------------------------------
